# VANTHAI_BANGALORE_AI_HACKATHON_SAPTHAGIRI

./: .gitignore  FORM18_AGENT_QUICK_REFERENCE.md  FORM18_IMPLEMENTATION_SUMMARY.md  FRONTEND_INTEGRATION_GUIDE.md  LmStudio.md  PRD_Backend_v2.md  PRD_Frontend_v2.md  README.md  RUNNING.md  cloudcare_refactor_plan.md  docker-compose.yml  package-lock.json  start.sh
Cloudcare_frontend_source/: DOCTOR_DASHBOARD_COMPLETE.md  HOSPITAL_DASHBOARD_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PROJECT_COMPLETE.md  QUICKSTART_DEMO.md  README.md  SETUP_COMPLETE.md  package-lock.json  package.json
Cloudcare_frontend_source/app/: layout.tsx  page.tsx  providers.tsx
Cloudcare_frontend_source/hooks/: useDoctor.ts  useHospital.ts
Cloudcare_frontend_source/lib/: mockData.ts
ERP-SIH/: package-lock.json  router.tsx
VanthAI_backend/: Dockerfile  main.py  pyproject.toml
VanthAI_backend/agents/: base_agent.py
VanthAI_backend/agents/cloudcare/: agent.py  prompts.py  routes.py  tools.py
VanthAI_backend/agents/itr/: agent.py  prompts.py  routes.py  tools.py
VanthAI_backend/core/: config.py  db.py  dispatcher.py  gemini_live.py  http_chat.py  redis_client.py  websocket.py
VanthAI_backend/migrations/: init.sql  seed.sql
VanthAI_backend/models/: cloudcare.py
VanthAI_backend/scratch/: debug_tool.py  test_prompt.py
VanthAI_backend/tests/: test_critical.py
VanthAI_frontend/: fix_inputprops.py  fix_sx.py  fix_ts_errors.py  fix_ui_errors.py  index.html  package-lock.json  package.json  ts_errors.txt  tsconfig.tsbuildinfo  vite.config.ts
(+148 files in other folders)
