[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vanthai-backend"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
  "fastapi==0.136.1",
  "uvicorn[standard]==0.46.0",
  "websockets==15.0.1",
  "pydantic==2.11.4",
  "pydantic-settings==2.9.1",

  # LangGraph / LangChain (v1.0 stable — April 2026)
  # ⚠️ langchain-google-genai 4.2.2: uses google-genai SDK internally.
  #    Use ChatGoogleGenerativeAI(model=..., google_api_key=...) — NOT genai.configure()
  # ⚠️ langchain-openai 1.1.12: use ChatOpenAI(base_url=..., api_key="lm-studio") for LM Studio
  "langgraph==1.1.9",
  "langchain-core==1.3.2",
  "langchain-google-genai==4.2.2",
  "langchain-openai==1.1.12",

  # Database
  "psycopg[binary,pool]==3.3.3",
  "sqlalchemy[asyncio]==2.0.49",

  # Redis
  "redis==6.1.0",

  # Utilities
  "python-dotenv==1.1.0",
  "structlog==25.4.0",
  "httpx==0.28.1",
]

[tool.setuptools.packages.find]
where = ["."]
